--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>studioMedico</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>studioMedico</name>
-	<description>progetto studio medico</description>
+	<description>progetto studio medicoEntity</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
